// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diocese page has the correct data & formatting for the diocese of Southwark 1`] = `
<DocumentFragment>
  <div
    class="m-10"
  >
    <h1
      class="govuk-heading-xl"
      data-testid="SouthwarkPageTitle"
    >
      Diocese of Southwark
    </h1>
    <div
      data-testid="citation"
    >
      <b>
        Citation
      </b>
      <p
        data-testid="citationText"
      >
        The data on this page comes from 
        <i>
          <a
            class="govuk-link"
            data-testid="citationLink"
            href="https://www.crs.org.uk/catholicism-in-numbers"
          >
            Catholicism in Numbers
          </a>
        </i>
        , a project by the Catholic Record Society.
      </p>
    </div>
    <div>
      <h2
        class="govuk-heading-l"
        data-testid="SouthwarkConversionsTopicSectionHeading"
      >
        Conversions
      </h2>
      <strong
        data-testid="SouthwarkConversionsAccuracySubheading"
      >
        Note on accuracy of data
      </strong>
      <p
        data-testid="SouthwarkConversionsAccuracy"
      >
        The data below records receptions into the Catholic Church. It does not include figures for adult baptisms.
      </p>
      <div
        class="bg-[var(--colour-grey-3)]"
        data-testid="SouthwarkConversionsDataDisplayBox"
      >
        <div
          class="m-6 pt-2 pb-0.25"
          data-testid="SouthwarkConversionsDataDisplayBoxContents"
        >
          <div
            data-testid="SouthwarkConversionsChartSection"
          >
            <div>
              <h3
                class="govuk-heading-m mb-1"
                role="contextHeader"
              >
                Conversions to Catholicism in the Diocese of Southwark
              </h3>
              <i
                role="contextParagraph"
              >
                Receptions into the Catholic Church in the Diocese of Southwark
              </i>
              <div
                role="graph"
              >
                <div>
                  <img
                    data-testid="placeholderChartImage"
                    src="images/minimalist_National_Conversions.png"
                    width="50%"
                  />
                  <p
                    data-testid="placeholderText"
                  >
                    Loading graph...
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="SouthwarkConversionsTableSection"
            >
              <div>
                <table
                  class="govuk-table"
                  data-testid="table"
                >
                  <thead
                    class="govuk-table__head"
                    data-testid="columnHeadings"
                  >
                    <tr
                      class="govuk-table__row"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="keyColumn"
                        scope="col"
                      >
                        Year
                      </th>
                      <th
                        class="govuk-table__header"
                        data-testid="valueColumn"
                        scope="col"
                      >
                        Converts to Catholicism
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="govuk-table__body"
                    data-testid="rows"
                  >
                    <tr
                      class="govuk-table__row"
                      data-testid="row1"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row1key"
                        scope="row"
                      >
                        2022
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row1Value"
                      >
                        206
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row2"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row2key"
                        scope="row"
                      >
                        2021
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row2Value"
                      >
                        132
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row3"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row3key"
                        scope="row"
                      >
                        2019
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row3Value"
                      >
                        358
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row4"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row4key"
                        scope="row"
                      >
                        2010
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row4Value"
                      >
                        451
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row5"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row5key"
                        scope="row"
                      >
                        2000
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row5Value"
                      >
                        128
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2
        class="govuk-heading-l"
        data-testid="SouthwarkMassAttendanceTopicSectionHeading"
      >
        Mass Attendance
      </h2>
      <strong
        data-testid="SouthwarkMassAttendanceAccuracySubheading"
      >
        Note on accuracy of data
      </strong>
      <p
        data-testid="SouthwarkMassAttendanceAccuracy"
      >
        The accuracy with which attendance is counted may vary. A person may accidentally be counted twice and figures may overstate or understate where an estimate is required, such as at very large services or if mechanical means of counting fail. Additionally, approaches to counting may vary across churches in a diocese or nation.
      </p>
      <div
        class="bg-[var(--colour-grey-3)]"
        data-testid="SouthwarkMassAttendanceDataDisplayBox"
      >
        <div
          class="m-6 pt-2 pb-0.25"
          data-testid="SouthwarkMassAttendanceDataDisplayBoxContents"
        >
          <div
            data-testid="SouthwarkMassAttendanceChartSection"
          >
            <div>
              <h3
                class="govuk-heading-m mb-1"
                role="contextHeader"
              >
                Typical Sunday Mass Attendance
              </h3>
              <i
                role="contextParagraph"
              >
                Typical number of people attending Sunday Mass in the Diocese of Southwark
              </i>
              <div
                role="graph"
              >
                <div>
                  <img
                    data-testid="placeholderChartImage"
                    src="images/minimalist_National_Mass_Attendance.png"
                    width="50%"
                  />
                  <p
                    data-testid="placeholderText"
                  >
                    Loading graph...
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="SouthwarkMassAttendanceTableSection"
            >
              <div>
                <table
                  class="govuk-table"
                  data-testid="table"
                >
                  <thead
                    class="govuk-table__head"
                    data-testid="columnHeadings"
                  >
                    <tr
                      class="govuk-table__row"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="keyColumn"
                        scope="col"
                      >
                        Year
                      </th>
                      <th
                        class="govuk-table__header"
                        data-testid="valueColumn"
                        scope="col"
                      >
                        Number attending Mass
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="govuk-table__body"
                    data-testid="rows"
                  >
                    <tr
                      class="govuk-table__row"
                      data-testid="row1"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row1key"
                        scope="row"
                      >
                        2022
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row1Value"
                      >
                        57360
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row2"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row2key"
                        scope="row"
                      >
                        2021
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row2Value"
                      >
                        48188
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row3"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row3key"
                        scope="row"
                      >
                        2018
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row3Value"
                      >
                        80178
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row4"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row4key"
                        scope="row"
                      >
                        2008
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row4Value"
                      >
                        94217
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row5"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row5key"
                        scope="row"
                      >
                        1999
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row5Value"
                      >
                        94467
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Diocese page has the correct data & formatting for the diocese of Westminster 1`] = `
<DocumentFragment>
  <div
    class="m-10"
  >
    <h1
      class="govuk-heading-xl"
      data-testid="WestminsterPageTitle"
    >
      Diocese of Westminster
    </h1>
    <div
      data-testid="citation"
    >
      <b>
        Citation
      </b>
      <p
        data-testid="citationText"
      >
        The data on this page comes from 
        <i>
          <a
            class="govuk-link"
            data-testid="citationLink"
            href="https://www.crs.org.uk/catholicism-in-numbers"
          >
            Catholicism in Numbers
          </a>
        </i>
        , a project by the Catholic Record Society.
      </p>
    </div>
    <div>
      <h2
        class="govuk-heading-l"
        data-testid="WestminsterConversionsTopicSectionHeading"
      >
        Conversions
      </h2>
      <strong
        data-testid="WestminsterConversionsAccuracySubheading"
      >
        Note on accuracy of data
      </strong>
      <p
        data-testid="WestminsterConversionsAccuracy"
      >
        The data below records receptions into the Catholic Church. It does not include figures for adult baptisms.
      </p>
      <div
        class="bg-[var(--colour-grey-3)]"
        data-testid="WestminsterConversionsDataDisplayBox"
      >
        <div
          class="m-6 pt-2 pb-0.25"
          data-testid="WestminsterConversionsDataDisplayBoxContents"
        >
          <div
            data-testid="WestminsterConversionsChartSection"
          >
            <div>
              <h3
                class="govuk-heading-m mb-1"
                role="contextHeader"
              >
                Conversions to Catholicism in the Diocese of Westminster
              </h3>
              <i
                role="contextParagraph"
              >
                Receptions into the Catholic Church in the Diocese of Westminster
              </i>
              <div
                role="graph"
              >
                <div>
                  <img
                    data-testid="placeholderChartImage"
                    src="images/minimalist_National_Conversions.png"
                    width="50%"
                  />
                  <p
                    data-testid="placeholderText"
                  >
                    Loading graph...
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="WestminsterConversionsTableSection"
            >
              <div>
                <table
                  class="govuk-table"
                  data-testid="table"
                >
                  <thead
                    class="govuk-table__head"
                    data-testid="columnHeadings"
                  >
                    <tr
                      class="govuk-table__row"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="keyColumn"
                        scope="col"
                      >
                        Year
                      </th>
                      <th
                        class="govuk-table__header"
                        data-testid="valueColumn"
                        scope="col"
                      >
                        Converts to Catholicism
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="govuk-table__body"
                    data-testid="rows"
                  >
                    <tr
                      class="govuk-table__row"
                      data-testid="row1"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row1key"
                        scope="row"
                      >
                        2022
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row1Value"
                      >
                        227
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row2"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row2key"
                        scope="row"
                      >
                        2021
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row2Value"
                      >
                        193
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row3"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row3key"
                        scope="row"
                      >
                        2019
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row3Value"
                      >
                        298
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row4"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row4key"
                        scope="row"
                      >
                        2010
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row4Value"
                      >
                        628
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row5"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row5key"
                        scope="row"
                      >
                        2000
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row5Value"
                      >
                        541
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2
        class="govuk-heading-l"
        data-testid="WestminsterMassAttendanceTopicSectionHeading"
      >
        Mass Attendance
      </h2>
      <strong
        data-testid="WestminsterMassAttendanceAccuracySubheading"
      >
        Note on accuracy of data
      </strong>
      <p
        data-testid="WestminsterMassAttendanceAccuracy"
      >
        The accuracy with which attendance is counted may vary. A person may accidentally be counted twice and figures may overstate or understate where an estimate is required, such as at very large services or if mechanical means of counting fail. Additionally, approaches to counting may vary across churches in a diocese or nation.
      </p>
      <div
        class="bg-[var(--colour-grey-3)]"
        data-testid="WestminsterMassAttendanceDataDisplayBox"
      >
        <div
          class="m-6 pt-2 pb-0.25"
          data-testid="WestminsterMassAttendanceDataDisplayBoxContents"
        >
          <div
            data-testid="WestminsterMassAttendanceChartSection"
          >
            <div>
              <h3
                class="govuk-heading-m mb-1"
                role="contextHeader"
              >
                Typical Sunday Mass Attendance
              </h3>
              <i
                role="contextParagraph"
              >
                Typical number of people attending Sunday Mass in the Diocese of Westminster
              </i>
              <div
                role="graph"
              >
                <div>
                  <img
                    data-testid="placeholderChartImage"
                    src="images/minimalist_National_Mass_Attendance.png"
                    width="50%"
                  />
                  <p
                    data-testid="placeholderText"
                  >
                    Loading graph...
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="WestminsterMassAttendanceTableSection"
            >
              <div>
                <table
                  class="govuk-table"
                  data-testid="table"
                >
                  <thead
                    class="govuk-table__head"
                    data-testid="columnHeadings"
                  >
                    <tr
                      class="govuk-table__row"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="keyColumn"
                        scope="col"
                      >
                        Year
                      </th>
                      <th
                        class="govuk-table__header"
                        data-testid="valueColumn"
                        scope="col"
                      >
                        Number attending Mass
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="govuk-table__body"
                    data-testid="rows"
                  >
                    <tr
                      class="govuk-table__row"
                      data-testid="row1"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row1key"
                        scope="row"
                      >
                        2022
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row1Value"
                      >
                        90202
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row2"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row2key"
                        scope="row"
                      >
                        2021
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row2Value"
                      >
                        74308
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row3"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row3key"
                        scope="row"
                      >
                        2018
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row3Value"
                      >
                        127340
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row4"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row4key"
                        scope="row"
                      >
                        2008
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row4Value"
                      >
                        151668
                      </td>
                    </tr>
                    <tr
                      class="govuk-table__row"
                      data-testid="row5"
                    >
                      <th
                        class="govuk-table__header"
                        data-testid="row5key"
                        scope="row"
                      >
                        1999
                      </th>
                      <td
                        class="govuk-table__cell"
                        data-testid="row5Value"
                      >
                        154042
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
